<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_levels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/levels"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sl_levels"
        app:layout_constraintStart_toStartOf="@+id/sl_levels"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sl_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="50.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_levels" />

    <TextView
        android:id="@+id/tv_operations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/operations"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sl_operations"
        app:layout_constraintStart_toStartOf="@+id/sl_operations"
        app:layout_constraintTop_toBottomOf="@+id/sl_levels" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sl_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="15.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operations" />

    <TextView
        android:id="@+id/tv_range"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/num_range"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sl_range"
        app:layout_constraintStart_toStartOf="@+id/sl_range"
        app:layout_constraintTop_toBottomOf="@+id/sl_operations" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/sl_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="1000.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_range"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_sl_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/timer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/sl_range"
        app:layout_constraintStart_toStartOf="@+id/sl_range"
        app:layout_constraintTop_toBottomOf="@+id/sl_range" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sl_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="10800.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sl_timer"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_timer_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_attention"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/sl_timer"
        app:layout_constraintTop_toBottomOf="@+id/sl_timer" />

    <CheckBox
        android:id="@+id/cb_op1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cb_op2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sl_timer"
        app:layout_constraintVertical_chainStyle="packed" />

    <CheckBox
        android:id="@+id/cb_op2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cb_op3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_op1" />

    <CheckBox
        android:id="@+id/cb_op3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cb_op4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_op2" />

    <CheckBox
        android:id="@+id/cb_op4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_op3" />

    <TextView
        android:id="@+id/tv_decimal_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_attention"
        app:layout_constraintStart_toStartOf="@+id/cb_op4"
        app:layout_constraintTop_toBottomOf="@+id/cb_op4" />

    <Button
        android:id="@+id/btn_start_custom"
        style="@style/Default_Button"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>