<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorErrorContainer"
        app:cardCornerRadius="24dp"
        app:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_res_question"
                style="@style/Default_Card_text"
                android:text="@string/question"
                android:textColor="?attr/colorOnErrorContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_res_answer"
                style="@style/Default_Card_text"
                android:layout_marginTop="24dp"
                android:text="@string/answer"
                android:textColor="?attr/colorOnErrorContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_res_question" />

            <TextView
                android:id="@+id/tv_result"
                style="@style/Default_Card_text"
                android:text="@string/wrong"
                android:textColor="?attr/colorOnErrorContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>